- PR#6566: -short-paths and signature inclusion errors
- PR#6572: Fatal error with recursive modules
- PR#6578: Recursive module containing alias causes Segmentation fault
- PR#6581: Some bugs in generative functors
- PR#6584: ocamldep support for "-open M"
  (Gabriel Scherer, review by Damien Doligez, report by Hezekiah M. Carty)
- PR#6553: Missing command line options for ocamldoc
- PR#6562: Fix ocamldebug module source lookup
  (Leo White)
- PR#6588: Code generation errors for ARM
  (Mark Shinwell, Xavier Leroy)
- PR#6590: Improve Windows (MSVC and mingw) build
  (Chen Gang)
- PR#6599: ocamlbuild: add -bin-annot when using -pack
  (Christopher Zimmermann)
- PR#6602: Fatal error when tracing a function with abstract type

OCaml 4.02.0:
-------------

(Changes that can break existing programs are marked with a "*")

Language features:
- Attributes and extension nodes
  (Alain Frisch)
- Generative functors (PR#5905)
  (Jacques Garrigue)
- Module aliases
  (Jacques Garrigue)
* Alternative syntax for string literals {id|...|id} (can break comments)
  (Alain Frisch)
- Separation between read-only strings (type string) and read-write byte
  sequences (type bytes). Activated by command-line option -safe-string.
  (Damien Doligez)
- PR#6318: Exception cases in pattern matching
  (Jeremy Yallop, backend by Alain Frisch)
- PR#5584: Extensible open datatypes
  (Leo White)

Build system for the OCaml distribution:
- Use -bin-annot when building.
- Use GNU make instead of portable makefiles.
- Updated build instructions for 32-bit Mac OS X on Intel hardware.

Shedding weight:
* Removed Camlp4 from the distribution, now available as third-party software.
* Removed Labltk from the distribution, now available as a third-party library.

Type system:
* PR#6235: Keep typing of pattern cases independent in principal mode
  (i.e. information from previous cases is no longer used when typing
  patterns; cf. 'PR#6235' in testsuite/test/typing-warnings/records.ml)
  (Jacques Garrigue)