@@ -55,7 +55,7 @@ let of_string s = copy (unsafe_of_string s)
 
 let sub s ofs len =
   if ofs < 0 || len < 0 || ofs > length s - len
-  then invalid_arg "Bytes.sub"
+  then invalid_arg "String.sub / Bytes.sub"
   else begin
     let r = create len in
     unsafe_blit s ofs r 0 len;
@@ -74,7 +74,7 @@ let extend s left right =
 
 let fill s ofs len c =
   if ofs < 0 || len < 0 || ofs > length s - len
-  then invalid_arg "Bytes.fill"
+  then invalid_arg "String.fill / Bytes.fill"
   else unsafe_fill s ofs len c
 
 let blit s1 ofs1 s2 ofs2 len =
@@ -86,7 +86,7 @@ let blit s1 ofs1 s2 ofs2 len =
 let blit_string s1 ofs1 s2 ofs2 len =
   if len < 0 || ofs1 < 0 || ofs1 > string_length s1 - len
              || ofs2 < 0 || ofs2 > length s2 - len
-  then invalid_arg "Bytes.blit_string"
+  then invalid_arg "String.blit / Bytes.blit_string"
   else unsafe_blit_string s1 ofs1 s2 ofs2 len
 
 let iter f a =
@@ -224,7 +224,7 @@ let index s c = index_rec s (length s) 0 c;;
 
 let index_from s i c =
   let l = length s in
-  if i < 0 || i > l then invalid_arg "Bytes.index_from" else
+  if i < 0 || i > l then invalid_arg "String.index_from / Bytes.index_from" else
   index_rec s l i c;;
 
 let rec rindex_rec s i c =
@@ -234,19 +234,28 @@ let rec rindex_rec s i c =
 let rindex s c = rindex_rec s (length s - 1) c;;
 
 let rindex_from s i c =
-  if i < -1 || i >= length s then invalid_arg "Bytes.rindex_from" else
-  rindex_rec s i c;;
+  if i < -1 || i >= length s then
+    invalid_arg "String.rindex_from / Bytes.rindex_from"
+  else
+    rindex_rec s i c
+;;
 
 let contains_from s i c =
   let l = length s in
-  if i < 0 || i > l then invalid_arg "Bytes.contains_from" else
-  try ignore (index_rec s l i c); true with Not_found -> false;;
+  if i < 0 || i > l then
+    invalid_arg "String.contains_from / Bytes.contains_from"
+  else
+    try ignore (index_rec s l i c); true with Not_found -> false
+;;
 
 let contains s c = contains_from s 0 c;;
 
 let rcontains_from s i c =
-  if i < 0 || i >= length s then invalid_arg "Bytes.rcontains_from" else
-  try ignore (rindex_rec s i c); true with Not_found -> false;;
+  if i < 0 || i >= length s then
+    invalid_arg "String.rcontains_from / Bytes.rcontains_from"
+  else
+    try ignore (rindex_rec s i c); true with Not_found -> false
+;;
 
 type t = bytes
 
